--- a/TwitterDemo/src/main/java/com/twitter/demo/Resources/Email/Templates/AccountVerification.html
+++ b/TwitterDemo/src/main/java/com/twitter/demo/Resources/Email/Templates/AccountVerification.html
@@ -183,8 +183,8 @@
                             <tr>
                                 <td class="content-cell">
                                     <h1>Verify your email address</h1>
-                                    <p>Thanks for signing up for Twitter! We're excited to
-                                        have you as an early user.</p> <!-- Action -->
+                                    <pre>Thanks for signing up for Twitter! We're excited to
+                                        have you as an early user.</pre> <!-- Action -->
                                     <table class="body-action" align="center" width="100%"
                                            cellpadding="0" cellspacing="0">
                                         <tr>
