--- a/TwitterDemo/src/main/resources/templates/Email/UserInteractiveTemplate.html
+++ b/TwitterDemo/src/main/resources/templates/Email/UserInteractiveTemplate.html
@@ -61,6 +61,9 @@ display:flex
 }
 
 
+
+
+
 </style>
 <body style="background-color: aliceblue;">
 <svg width="48px" height="48px" viewBox="0 0 1024 1024" data-aut-id="icon" class="" fill-rule="evenodd">
@@ -71,24 +74,36 @@ display:flex
 <div>
     <div id="username-div" class="user"></div>
     <br/>
-    <div class="display-info"> you have car inspection booking with id <pre> </pre> <div id="booking-id" style="font-weight:700"></div><pre> </pre> on <pre> </pre><div id="booking-date"></div>
+    <div class="display-info"> you have car inspection booking with id
+        <pre> </pre>
+        <div id="booking-id" style="font-weight:700"></div>
+        <pre> </pre>
+        on
+        <pre> </pre>
+        <div id="booking-date"></div>
     </div>
 
     <div>Following Actions are available</div>
 
     <br/>
-    <button class="button-3" role="button" style="margin-right:5px;" onclick="callToReschedule()">Reschedule</button>
 
-    <button class="button-3" role="button" style="background-color:#db5757;" onClick="callToCancel()">Cancel</button>
-
+    <form>
+        <div id="actionDiv" style="display:flex">
+            <input type="radio" id="cancelAppointment" name="fav_language" value="Cancel">
+            <label for="cancelAppointment">Cancel</label><br>
+            <input type="radio" id="rescheduleAppointment" name="fav_language" value="Reschedule">
+            <label for="rescheduleAppointment">Reschedule</label><br>
+        </div>
+        <br/>
+        <textarea id="w3review" name="w3review" rows="4" cols="50">
+       Feedback and suggestions
+  </textarea>
+        <br/><br/>
+        <button class="button-3" role="button" onclick="callPageInteractionApi()">Submit</button>
+    </form>
 </div>
 </body>
 <script>
-    $(document).ready(function(){
-    document.getElementById("username-div").innerHTML = "Hi Nitin Khulbe,";
-    document.getElementById("booking-id").innerHTML = "YU66TGVB";
-    document.getElementById("booking-date").innerHTML = "23-11-2021";
-    });
 
 </script>
 </html>
