--- a/TwitterDemo/src/main/resources/templates/UserInteractiveTemplate.html
+++ b/TwitterDemo/src/main/resources/templates/UserInteractiveTemplate.html
@@ -75,13 +75,7 @@ display:flex
 <div>
     <div id="username-div" class="user"></div>
     <br/>
-    <div class="display-info"> You have car inspection booking with id
-        <pre> </pre>
-        <div id="booking-id" style="font-weight:700"></div>
-        <pre> </pre>
-        on
-        <pre> </pre>
-        <div id="booking-date"></div>
+    <div class="display-info"> You have car inspection booking with id bookingId on appointmentDate
     </div>
 
     <div>Following Actions are available</div>
