--- a/TwitterDemo/src/main/resources/templates/UserBookingInformationTemplate.html
+++ b/TwitterDemo/src/main/resources/templates/UserBookingInformationTemplate.html
@@ -18,12 +18,12 @@
 <body style="background-color: #efeee9;">
 <svg width="48px" height="48px" viewBox="0 0 1024 1024" data-aut-id="icon" class="" fill-rule="evenodd"><path class="rui-4K4Y7" d="M661.333 256v512h-128v-512h128zM277.333 298.667c117.824 0 213.333 95.531 213.333 213.333s-95.509 213.333-213.333 213.333c-117.824 0-213.333-95.531-213.333-213.333s95.509-213.333 213.333-213.333zM794.496 384l37.504 37.504 37.504-37.504h90.496v90.496l-37.504 37.504 37.504 37.504v90.496h-90.496l-37.504-37.504-37.504 37.504h-90.496v-90.496l37.504-37.504-37.504-37.504v-90.496h90.496zM277.333 426.667c-47.061 0-85.333 38.293-85.333 85.333s38.272 85.333 85.333 85.333c47.061 0 85.333-38.293 85.333-85.333s-38.272-85.333-85.333-85.333z"></path></svg>
 <div>
-    <div id="username-div" class="user"> </div> <br/><div> Hi userName , you have the following car inspection booking</div>
+    <div id="username-div" class="user"> </div> <br/><div> Hi userName , You have the following car inspection booking</div>
     <br/>
     <a><div class="info">Booking Id : bookingId</div></a><br>
     <a><div class="info">Booking Date : bookingDate</div></a>
     <br/>
-    <a><div class="info">Booking Venue : bookingVenue</div></div></a>
+    <a><div class="info">Booking Venue : bookingVenue</div></a>
 </div>
 </body>
 </html>
