--- a/TwitterDemo/src/main/resources/templates/UserInteractiveTemplate.html
+++ b/TwitterDemo/src/main/resources/templates/UserInteractiveTemplate.html
@@ -75,7 +75,7 @@ display:flex
 <div>
     <div id="username-div" class="user"></div>
     <br/>
-    <div class="display-info"> You have car inspection booking with id bookingId on appointmentDate
+    <div class="display-info"> You have car inspection booking with id bookingId on bookingDate
     </div>
 
     <div>Following Actions are available</div>
